--- a/styles.css
+++ b/styles.css
@@ -10,18 +10,18 @@ h1 {
 
 h2 {
   color: rgb(206, 39, 39);
-  text-align: center;
+  text-align: left;
 }
 
 
 h3 {
   color: rgb(206, 39, 39);
-  text-align: center;
+  text-align: left;
 }
 
 h4 {
   color: rgb(206, 39, 39);
-  text-align: center;
+  text-align: left;
 }
 
 table {
