--- a/styles.css
+++ b/styles.css
@@ -43,13 +43,16 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
 }
 
 
 p {
   font-family: verdana;
-  font-size: 20px;
-  text-align: center;
+  font-size: 14px;
+  text-align: left;
+  text-align: justify;
+  text-justify: inter-word;
 }
 
 button {
@@ -64,6 +67,7 @@ button {
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
+  border-radius: 100px;
 }
 
 button {
@@ -75,6 +79,9 @@ button {
 button:hover {
   background-color: #04AA6D;
   color: white;
+}
+button:active{
+  background-color: orchid;
 }
 
 .floating {
@@ -106,10 +113,7 @@ footer {
 
 /* Create two columns/boxes that floats next to each other */
 nav {
-  float: left;
-  width: 20%;
-  height: 300px; /* only for demonstration, should be removed */
- 
+  width: 100%;
 }
 
 
@@ -125,7 +129,7 @@ nav {
 }
 
 .left {
-  width: 10%;
+  width: 20%;
   border-radius: 25px;
 }
 .right {
@@ -135,7 +139,7 @@ nav {
 }
 
 .middle {
-  width: 75%;
+  width: 70%;
   border-radius: 25px;
   background-color: rgb(128, 176, 194);
 }
@@ -145,4 +149,40 @@ nav {
   content: "";
   display: table;
   clear: both;
+}
+
+@media screen and (max-width: 768px) {
+  .column {
+    width: 100%;
+    float: none;
+  }
+  
+  .left {
+    width: 100%;
+  }
+  
+  .middle {
+    width: 100%;
+  }
+  
+  nav {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+}
+
+figure {
+  border: 1px #cccccc solid;
+  padding: 4px;
+  margin: auto;
+  max-width: 100%;
+}
+
+figcaption {
+  background-color: grey;
+  color: white;
+  font-style: italic;
+  padding: 2px;
+  text-align: center;
 }
